[package]
name = "teahook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
minreq = { version = "2.11.0", features = ["https-native"] }
flate2 = "1.0.28"
tar = "0.4.40"
anyhow = "1.0.79"
which = "6.0.0"
cargo_metadata = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.gitea]
repository = "go-gitea/gitea"
tag = "v1.21.4"
version = "1.21.4"
